# deltastrik

./: .gitignore  .pre-commit-config.yaml  README.md  bandit.yaml  pyproject.toml
deltastrik/: __init__.py  __main__.py  cli.py
deltastrik/core/: command_handler.py  config.py  ollama_client.py  prompt_engine.py  session_manager.py
deltastrik/tui/: app.py  chat_view.py  deltastrik.tcss  input_bar.py  status_bar.py
deltastrik/utils/: logging_utils.py
