[project]
name = "deltastrik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "textual>=6.4.0",
]
[project.scripts]
deltastrik = "deltastrik.cli:main"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=8.4.2",
    "twine>=6.2.0",
]

[tool.pyright]
reportMissingImports = "none"