[project]
name = "deltastrik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "textual>=6.4.0",
]
[project.scripts]
deltastrik = "deltastrik.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.9.0",
    "build>=1.3.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "twine>=6.2.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "vulture>=2.14",
]

[tool.pyright]
reportMissingImports = "none"


[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
pretty = true


[tool.ruff]
# General settings
line-length = 170
target-version = "py312"  # or your Python version

# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "tests",
    "migrations",
]
